welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: not found: value /
  var a1 / Int = a/10
         ^shareDigit:3: error: not found: value /
  var a2 / Int = a%10
         ^shareDigit:4: error: not found: value /
  var b1 / Int = b/10
         ^shareDigit:5: error: not found: value /
  var b2 / Int = b%10
         ^